# -

Lab 1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  NumericalIntegration.hpp  SimpsonIntegration.cpp  SimpsonIntegration.hpp  TrapezoidalIntegration.cpp  TrapezoidalIntegration.hpp  main.cpp
Lab 1/x64/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc143.idb
Lab 3/: Array3D.sln  Array3D.vcxproj  ConsoleApplication.cpp  ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters
Lab 3/x64/Debug/: Array3D.exe.recipe  Array3D.ilk  Array3D.vcxproj.FileListAbsolute.txt  vc143.idb
Lab 4/: Keyboard.cpp  Keyboard.sln  Keyboard.vcxproj  Keyboard.vcxproj.filters  main.cpp
Lab 4/headers/: Command.h  CopyCommand.h  ICommand.h  IKeyboard.h  IWorkflow.h  Key.h  Keyboard.h  PasteCommand.h  StringCommand.h  Workflow.h
Lab 4/src/: Command.cpp  CopyCommand.cpp  Key.cpp  Keyboard.cpp  PasteCommand.cpp  StringCommand.cpp  Workflow.cpp
Lab 4/x64/Debug/: Keyboard.exe.recipe  Keyboard.ilk  Keyboard.vcxproj.FileListAbsolute.txt  vc143.idb
Lab 5/: CMakeLists.txt
Lab 5/Registration/: CMakeLists.txt  Registration.cpp  Registration.h
Lab 6/: Fabric.cpp  Fabric.sln  Fabric.vcxproj  Fabric.vcxproj.filters  main.py
Lab 6/x64/Debug/: Fabric.exe.recipe  Fabric.ilk  Fabric.vcxproj.FileListAbsolute.txt  vc143.idb
Lab2/: ConsoleApplication2.sln  ConsoleApplication2.vcxproj  main.cpp
Lab2/x64/Debug/: ConsoleApplication2.exe.recipe  ConsoleApplication2.ilk  vc143.idb  (+1 more)
(+38 files in other folders)
